# nomi_api_client

./: Cargo.toml  LICENSE  README.md
src/: client.rs  errors.rs  lib.rs
src/endpoints/: chats.rs  images.rs  mod.rs  nomis.rs
src/models/: chat.rs  mod.rs  nomi.rs
tests/: integration_tests.rs
