[package]
name = "nomi_api_client"
authors = ["ether-void"]
version = "0.1.0"
edition = "2021"
description = "Unofficial Nomi Api client"
exclude = ["target", "Cargo.lock"]
documentation = "https://docs.rs/nomi_api_client"
repository = "https://github.com/ether-void/nomi_api_client"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
